v1.15.10
--------------------------------------------------------------------------------
 * mod_proxy_http2: respect ProxyTimeout settings on backend connections
   while waiting on incoming data. [Ruediger Pluem, Stefan Eissing]

v1.15.9
--------------------------------------------------------------------------------
 * Since v1.15.4 mod_reqtimeout was enabled for h2 connections. This lead to closing of
   h2 connections when a handshake timeout was configured, irregardless if the handshake
   did happen or not. Added a positive test next to the negative one to ensure that 
   mod_reqtimeout is removed after a successful handshake. Fixes #196 

v1.15.8
--------------------------------------------------------------------------------
 * Fixed an unfortunate regression introduced in v1.15.7 that prevented
   H2_STREAM_ID to be set. Fixes <https://bz.apache.org/bugzilla/show_bug.cgi?id=64330>
   and Windows crashes reported in <https://www.apachelounge.com/viewtopic.php?p=39012#39012>. 
 * Synch with code spell/APLOGNO changes from Apache svn.

v1.15.7
--------------------------------------------------------------------------------
 * Fixes issue #195 regarding h2 slave connection ids that resulted in duplicate
   request ids being generated under loads.

v1.15.6
--------------------------------------------------------------------------------
 * Fix by Joe Orton for a gcc 10 warnings on s390x.

v1.15.5
--------------------------------------------------------------------------------
 * Fixed rare cases where a h2 worker could deadlock the main connection. All the good
   bits in this thanks to Yann Ylavic.
 
v1.15.4
--------------------------------------------------------------------------------
 * Fixed interaction with mod_reqtimeout. mod-h2 was knocking it out completely, however
   it allow configuration of the TLS handshake timeout and that is very useful indeed.
   Also, fixed a stupid mistake of mine that made `H2Direct` always `on`, irregardless 